--- a/recipe.css
+++ b/recipe.css
@@ -24,6 +24,9 @@ body{
 a{
     color: #A4A400 ;
 }
+.quotation{ 
+    background-color: #FFFFA8;
+}
 ul li{
     list-style-image: url("images/pie_icon.gif");
 }
@@ -33,7 +36,7 @@ ul li{
     border-bottom: 1px dotted black;
   } */
   
-  .ingredientlist .tooltip .tbsp .tooltiptext {
+  .ingredientlist .tooltip .word .tooltiptext {
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -47,6 +50,6 @@ ul li{
     z-index: 1;
   }
 
-  .ingredientlist .tooltip .tbsp:hover .tooltiptext {
+  .ingredientlist .tooltip .word:hover .tooltiptext {
     visibility: visible;
   }
